--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
                     <span class="title">1 Unit</span>
                     <span class="badge">10% Off</span>
                     <span class="price">$10.00 USD <del>$24.00 USD</del></span>
+                    <span class="textsize">Standard Price</span>
                 </label>
                 <div class="options hidden">
                     <div class="row">
-                        <select>
+                        <span>#1</span>
+                        <select class="size">
                             <option>S</option>
                             <option>M</option>
                             <option>L</option>
                         </select>
-                        <select>
+                        <select class="size">
                             <option>Black</option>
                             <option>Red</option>
                             <option>Blue</option>
@@ -48,24 +50,26 @@
                 </label>
                 <div class="options hidden">
                     <div class="row">
-                        <select>
+                        <span>#1</span>
+                        <select class="size">
                             <option>S</option>
                             <option>M</option>
                             <option>L</option>
                         </select>
-                        <select>
+                        <select class="size">
                             <option>Black</option>
                             <option>Red</option>
                             <option>Blue</option>
                         </select>
                     </div>
                     <div class="row">
-                        <select>
+                        <span>#2</span>
+                        <select class="size">
                             <option>S</option>
                             <option>M</option>
                             <option>L</option>
                         </select>
-                        <select>
+                        <select class="size">
                             <option>Colour</option>
                             <option>Red</option>
                             <option>Blue</option>
@@ -84,36 +88,39 @@
                 </label>
                 <div class="options hidden">
                     <div class="row">
-                        <select>
+                        <span>#1</span>
+                        <select class="size">
                             <option>S</option>
                             <option>M</option>
                             <option>L</option>
                         </select>
-                        <select>
+                        <select class="size">
                             <option>Colour</option>
                             <option>Red</option>
                             <option>Blue</option>
                         </select>
                     </div>
                     <div class="row">
-                        <select>
+                        <span>#2</span>
+                        <select class="size">
                             <option>S</option>
                             <option>M</option>
                             <option>L</option>
                         </select>
-                        <select>
+                        <select class="size">
                             <option>Colour</option>
                             <option>Red</option>
                             <option>Blue</option>
                         </select>
                     </div>
                     <div class="row">
-                        <select>
+                        <span>#3</span>
+                        <select  class="size">
                             <option>S</option>
                             <option>M</option>
                             <option>L</option>
                         </select>
-                        <select>
+                        <select class="size">
                             <option>Colour</option>
                             <option>Red</option>
                             <option>Blue</option>
